Denise/update pw meets processes (#422)
* update aktionen.adoc for trolley tag option and add other missing options

* add translations and some DE corrections

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1401,8 +1401,16 @@ Einstellungen
 | **Suchfeld anzeigen** = ID im Prozess direkt eingeben und suchen. +
 **Suchfeld nicht anzeigen** = ID kann nicht direkt gesucht werden.
 
-| **Picklisten-Status**
-| **Filter anzeigen** = Erlaubt, Picklisten im Prozess nach Status zu suchen. +
+|[#intable-trolley-tag]**Wagenkennung**
+| *_Hinweis:_* Diese Einstellung funktioniert nur, wenn Picklisten mithilfe der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App] bearbeitet werden. +
+**Suchfeld anzeigen** = Erlaubt, Picklisten im Prozess nach ihrer xref:warenwirtschaft:mobile-picklisten.adoc#330[Wagenkennung] zu suchen. Diese Einstellung funktioniert nur, wenn Picklisten mithilfe der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App] bearbeitet werden. +
+**Suchfeld nicht anzeigen** = Picklisten können nicht nach Wagenkennung gesucht werden.
+
+| **Automatischer Fokus**
+|Legt fest, welches der angezeigten Suchfelder beim Start des Prozesses gewählt ist. Meist das Suchfeld, mit dem primär gearbeitet wird.
+
+| **Picklistenstatus**
+| **Filter anzeigen** = Erlaubt, im Prozess Picklisten nach einem bestimmten Status zu suchen. +
 **Filter nicht anzeigen** = Picklisten können nicht nach Status gesucht werden.
 
 | **Eigner**
@@ -1456,7 +1464,7 @@ Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
 [.subhead]
 Einstellungen
 
-<<table-procedure-polling>> erläutert die zusätzlichen Einstellungen der Aktion. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settingsn>>.
+<<table-procedure-polling>> erläutert die zusätzlichen Einstellungen der Aktion. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
 
 [[table-procedure-polling]]
 .Aktion **Polling**
@@ -1703,7 +1711,7 @@ Verfügbare Subaktionen für diese Aktion:
 [#380]
 ==== Retourenetikett
 
-Mit der Aktion **Retourenetikett** wird das Etikett zu einer xref:auftraege:ruecksendeschein-erzeugen.adoc#[Retoure] per Subaktion automatisch zum Beispiel gedruckt oder gespeichert.
+Mit der Aktion **Retourenetikett** wird das Etikett zu einer Retoure per Subaktion automatisch zum Beispiel gedruckt oder gespeichert.
 
 [.subhead]
 Arbeitsschritte
