update auftrag aus angebot/filter/operatoren

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -1,5 +1,5 @@
 = Aufträge (Testphase)
-:keywords: Auftrag, Auftrag, Auftrag, Aufträge, Aufträge, Aufträge, Auftrags-ID, Auftragsabwicklung, Auftragsbearbeitung, Auftrag, Aufträge, Auftrag bearbeiten, Aufträge bearbeiten, Auftragsstatus, Status, Standardstatus, Auftragstyp, Auftrags-Typ, Auftragsart, Lieferauftrag, Lieferaufträge, Auftragsanlage, manuelle Auftragsanlage, Retoure, retournieren, Retouren, Retoure erstellen, Retoure anlegen, Gutschrift, Gewährleistung, Garantie, Reparatur, Reparaturauftrag, Sammelauftrag, Multi-Order, Multiorder, Multiauftrag, Multi-Auftrag, Sammelaufträge, Sammelauftrag, Vorbestellung, Vorbestellungen, Auftragssuche, Auftrag suchen, Auftrag filtern, Auftragsübersicht, Auftragsansicht, Auftrag anlegen, Auftrag erstellen, Auftragsdokument, Auftragsposition, Auftragseingang, Rechnung, Retourengründe, Retourengrund, Rückerstattung, Rückzahlung, Artikelmenge, Umtausch, Zahlungseingang, Warenausgang, Hauptauftrag, Retourenauftrag, Storno, Stornierung, Stornierungsbeleg, Stornobeleg, Korrektur, Korrekturbeleg, Auftragshistorie, Historie, Statushistorie, Lieferland, Auftragsbestätigung, Auftragsdetails, Sammelrechnung, Zahlungsbedingungen
+:keywords: Auftrag, Auftrag, Auftrag, Aufträge, Aufträge,...
 :description: Erfahre, wie du mit der neuen Aufträge-UI (Testphase) in plentymarkets arbeitest.
 :author: team-order-core
 
@@ -8,7 +8,7 @@
 Prüfen, was geblieben ist, was neu ist, alle Änderungen dokumentieren. Siehe Aufgaben in Themen/Veranwortung.
 https://forum.plentymarkets.com/t/changelog-closed-beta/677887/3
 
-1. Übersicht
+1. Übersicht und Einleitung
 
 2. Grundeinstellungen Aufträge
 Warenhauszuordnung
@@ -20,6 +20,7 @@ Auftragsstatus
 Auftragsanlage
 Auftragsübersicht (neue UI)
 Detailansicht (neue UI) und myview
+
 Auftragstypen, darunter
 Lieferauftrag
 Angebot (neu schreiben)
@@ -79,6 +80,7 @@ Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *
 // TODO: siehe grundeinstellungen.adoc, plus Warenhauszuordnung und Fallback
 
 Im Menü *Einrichtung » Aufträge » Einstellungen* wählst du die Einstellungen, die für Aufträge automatisch eingestellt werden bzw. bei bestimmten Auftragsstatus oder Bedingungen gelten sollen. Zum Beispiel wählst du Standard-Einstellungen für die Auftragsherkunft und den Status von Aufträgen.
+[...]
 
 [#important-preconditions]
 == Wichtige Vorbedingungen beachten
@@ -108,24 +110,15 @@ siehe auftragsherkunft.adoc
 
 Auftragsstatus
 siehe auch grundeinstellungen.adoc
-
-
-
-[#270]
-==== Auftragsdetails
-
-Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
-
-[#284]
-==== Warenkorb
-
-Am Warenkorb-Symbol (icon:shopping_cart[set=material]) über der Tabelle wird dir die Anzahl der bereits hinzugefügten Artikel angezeigt. Möchtest du während des Hinzufügens von Artikeln den Warenkorb überprüfen oder hinzugefügte Artikel löschen, klicke auf diesen Warenkorb (icon:shopping_cart[set=material]).
 ////
 
+== Aufträge verwalten und bearbeiten
 
+Auftragsanlage
+// TODO: verschiedene Möglichkeiten
 
 [#creater-order-or-offer]
-==== Auftrag oder Angebot anlegen
+=== Auftrag oder Angebot anlegen
 
 Der Auftrag oder das Angebot wird individuell für Kund:innen im Menü *CRM » Kontakte* erstellt. Die Anlage verläuft in drei Schritten. Im ersten Schritt werden Auftragsdetails erfasst, im zweiten Schritt werden Artikel hinzugefügt und im dritten Schritt wird der Auftrag abgeschlossen. Wähle zunächst aus den Kontakten aus, für wen der Auftrag oder das Angebot angelegt werden soll. Gehe dabei wie im Folgenden beschrieben vor.
 
@@ -148,8 +141,14 @@ Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
 
 Die Ansichten der neuen Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
 
+Auftragsübersicht (neue UI)
+Aufträge suchen und Gruppenfunktion
+
+Detailansicht
+
 = Detailansicht Gestaltung
 include::{includedir}/_header.adoc[]
+// TODO: header
 
 Die Detailansicht eines Auftrags enthält alle relevanten Auftragsinformationen. Diese Informationen sind thematisch in Portlets angeordnet. Über die MyView Funktionalität kannst du die Portlets selbst und auch ihre Anordnung in der Detailansicht individuell einrichten. Das bedeutet, dass du selbst bestimmen kannst, welche Auftragsinformationen und damit verbundene Funktionen für dich am wichtigsten sind. Gestalte deine Auftragsbearbeitung effizienter, indem du dir eigene Ansichten einrichtest. Wie du dabei vorgehst, wird auf dieser Seite erklärt.
 
@@ -160,15 +159,250 @@ Die Detailansicht eines Auftrags enthält alle relevanten Auftragsinformationen.
 
 Du öffnest die Detailansicht eines Auftrags von der Auftragsübersicht aus. Gehe ins Menü *Aufträge » Aufträge [Testphase]* und <<LINK#, suche den Auftrag>>, den du öffnen und bearbeiten möchtest.
 Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standardansicht geöffnet. Du kannst die Standardansicht nutzen, um den Auftrag zu bearbeiten. Wenn du die Detailansicht individuell anpassen möchtest, kannst du eine eigene Ansicht erstellen. In den folgenden Kapiteln wird dir erklärt, wie du dafür vorgehst.
-// TODO: Detailansicht ist in G Doc vorbereitet
+
+
+[#create-new-view]
+=== Neue Ansicht erstellen
+
+. Gehe ins Menü *Aufträge » Aufträge [Testphase]*. Rechts oben wird die voreingestellte Ansicht angezeigt (Vorlagen: Standardansicht)
+. Klicke auf die Dropdown-Liste der Ansichten (icon:caret-down[role="darkGrey"]).
+. Klicke oben auf icon:plus[role="darkGrey"] *Neue Ansicht erstellen ...*.
+. Gib einen Namen in das sich öffnende Pop up-Fenster ein.
+. Klicke auf *Ansicht erstellen*. +
+→ Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet.
+Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
+
+image::artikel/neue-ui/assets/detailansicht-neue-ansicht.gif[]
+// TODO: image prüfen, ggf. neu
+
+
+[#create-grid]
+=== Ein Raster erstellen
+
+. Klicke auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]).
+. Füge Zeilen und Spalten hinzu, um ein Raster zu erstellen.
+.. Klicke auf icon:ellipsis-v[role="blue"] und dann auf icon:plus[role="darkGrey"] *Zeile hinzufügen*.
+.. Klicke auf *Spalte hinzufügen* (icon:plus[role="darkGrey"]).
+.. Ziehe die Spalten, um sie größer oder kleiner zu machen.
+
+image::artikel/neue-ui/assets/detailansicht-raster-erstellen.gif[]
+// TODO: image prüfen
+
+[#place-elements]
+=== Elemente platzieren
+
+. Füge Elemente per Drag & Drop hinzu.
+. Klicke auf icon:pencil[role="blue"] und passe die Einstellungen für das Element an.
+.. Ändere den Namen.
+.. Entscheide, welche Datenfelder das Element enthalten soll.
+.. Lege die Reihenfolge der Datenfelder per Drag & Drop fest.
+. Klicke auf icon:close[role="blue"]
+
+image::artikel/neue-ui/assets/detailansicht-elemente.gif[]
+// TODO: image prüfen
+
+[cols="1,4a"]
+|====
+|Symbol |Erläuterung
+
+| icon:pencil[role="blue"]
+|Führt eine Ebene tiefer.
+
+| icon:trash[role="blue"]
+|Löscht das Element.
+
+| icon:close[role="blue"]
+|Führt eine Ebene höher.
+|====
+
+[TIP]
+.Kann ich Elemente mehrfach hinzufügen?
+======
+Die Zahl im grauen Kreis gibt an, wie oft du das Element verwenden kannst.
+
+* Die meisten Elemente können nur einmal hinzugefügt werden.
+* Das Element *Eigenes Portlet* kann beliebig oft hinzugefügt werden.
+Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach hinzugefügt werden.
+======
+
+// TODO: struktur
+Portlets
+Einleitung
+
+[#individual-portlets]
+=== Eigene Portlets
+
+Das eigene Portlet unterscheidet sich von den vorgefertigten Portlets in zwei wichtigen Punkten. Das eigene Portlet:
+
+* kann beliebig oft hinzugefügt werden.
+* enthält alle Artikeldatenfelder und nicht nur eine Teilmenge, wie es bei den vorgefertigten Portlets der Fall ist.
+
+Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll.
+
+[discrete]
+==== Anwendungsbeispiel
+
+Stell dir vor, du bist mit der Standardanordnung der globalen Einstellungen nicht zufrieden. Du würdest lieber die Herstellereinstellungen und die Zustände separat gruppieren. Ein solches Szenario kann mit eigenen Portlets realisiert werden.
+
+. Füge beliebig viele eigene Portlets hinzu.
+. Gib den Portlets aussagekräftige Namen.
+. Füge die passenden Artikeldatenfelder zu den Portlets hinzu.
+
+image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
+// TODO: image
+
+////
+einfügen 1.5 Bearbeitung abschließen
+Erklärung für Speicherlogik nutzbar
+
+Portlets Standard
+////
+
+[#portlet-overview]
+==== Portlet Übersicht
+
+Im Portlet *Übersicht* siehst du allgemeine Informationen zum Auftrag.
+
+[[table-portlet-overview]]
+.Portlet: Übersicht
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Zahlungsart*
+|Wähle die gewünschte Zahlungsart aus der Dropdown-Liste.
+
+| *Sprache*
+|Wähle die gewünschte Zahlungsart aus der Dropdown-Liste.
+
+| *Währung*
+|Wähle 
+
+| *Wechselkurs*
+|Der Wechselkurs wird angezeigt.
+
+| *Versanddatum*
+|Gib ein Datum ein oder wähle über den Kalender eines aus, um alle Aufträge zu suchen, die an diesem Datum erstellt wurden.
+
+| *Versandprofil*
+|
+
+| *Paketnummern*
+|
+
+| *Herkunft*
+|
+
+| *Rückgabedatum*
+|
+
+| *Lager
+| 
+
+| *Eigner*
+|
 
 
 
+
+
+
+|====
+
+
+
+[[table-portlets]]
+.Portlet: Übersicht
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+// TODO: Beschreibung der Standardansicht, weil alles individualisierbar ist
+
+
+
+
+[#portlet-overview]
+Portlet Allgemein
+Im Portlet *Allgemein* siehst du...
+
+| *Warenwert netto*
+| Der Warenwert netto wird angezeigt.
+
+| *Rechnungsbetrag*
+| Der Rechnungsbetrag wird angezeigt.
+
+| *Versandkosten netto*
+| Die Versandkosten netto werden angezeigt.
+
+| *MwSt.*
+| Die Mehrwertsteuer wird in Euro angezeigt.
+
+| *Artikelmenge*
+| Die Anzahl der Artikel wird angezeigt
+
+| *Steuerfreier Betrag*
+| Der Steuerfreie Betrag wird angezeigt.
+
+2+^ Portlet Status und Tags
+
+| *Status*
+| Der Status der Bestellung wird angezeigt.
+| Wähle den Auftragsstatus aus Dropdown-Liste.
+
+| *Tags*
+| Wähle den Tag des Auftrags. Es können mehrere Tags per Dropdown-Liste ausgewählt werden.
+
+Auswahl:
+* Auftrags-Tag
+* Lieferdatum: gesetzt
+* Status: Geliefert
+* Status: Offen
+* Zahlung: bezahlt
+
+| *Adressen*
+| Rechnung - Rechnungsadresse und ID
+| Lieferung - Lieferadresse und ID
+Über die 3 Punkte rechts öffnet sich Bearbeiten
+
+// TODO: Verweis möglich?
+Adressangaben
+Anrede
+Firma (Name 1)
+Vorname
+Nachname
+Zusatz
+Adresse 1 (Straße)
+Adresse 2 (Hausnummer)
+Adresse 3 (Adresszusatz?
+Adresse 4 (Frei)
+Postleitzahl
+Ort
+Land - Dropdown
+Region/Bezirk - Dropdown
+
+Adressoptionen:
+E-Mail
+Telefon
+Typ: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
+eingeben und speichern
+
+2+^ Portlet Übersicht
+
+
+2+^
+
+
+2+^
+
+
+|====
 
 [#order-details]
 ==== Auftragsdetails
 
 Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
+
 // TODO: alle xref prüfen/anpassen
 
 [[table-order-details-new-order]]
@@ -216,6 +450,11 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 
 |====
 
+[#shopping-cart]
+==== Warenkorb
+
+Am Warenkorb-Symbol (icon:shopping_cart[set=material]) über der Tabelle wird dir die Anzahl der bereits hinzugefügten Artikel angezeigt. Möchtest du während des Hinzufügens von Artikeln den Warenkorb überprüfen oder hinzugefügte Artikel löschen, klicke auf diesen Warenkorb (icon:shopping_cart[set=material]).
+
 Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter indem du auf *Artikel hinzufügen* klickst. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
 [#create-orders-manually]
@@ -228,6 +467,7 @@ Du kannst Aufträge manuell im System anlegen, z.B. wenn eine Bestellung per Tel
 * In den xref:auftraege:auftraege-verwalten.adoc#210[Kontaktdaten]
 * In einem bestehenden xref:auftraege:auftraege-verwalten.adoc#220[Auftrag]
 * Über einen xref:auftraege:auftraege-verwalten.adoc#230[Barverkauf]
+* In einem bestehenden Angebot
 
 Diese verschiedenen Vorgehensweisen werden nachfolgend beschrieben.
 
@@ -238,7 +478,7 @@ Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftr
 ====
 
 ////
-Hier ergänzen um über Kontakt, aus einem Auftrag, über Barverkauf
+Hier ergänzen um das Vorgehen über Kontakt, aus einem Auftrag, über Barverkauf, aus Angebot
 ////
 
 [#create-order-or-offer-from-contact]
@@ -826,11 +1066,11 @@ xref:auftraege:auftraege-verwalten.adoc[Aufträge verwalten].
 | *Dokumentennummer*
 |Gib eine Dokumentennummer ein.
 
+
 | *Dokumentart*
 |Wähle eine Dokumentart aus der Dropdown-Liste. 
 // TODO: xref hinzufügen zu Auftragsdokumente
 Es stehen folgende Dokumentenarten zur Verfügung: Rechnung, Externe Rechnung, Stornobeleg Rechnung, Gutschrift, Externe Gutschrift, Stornobeleg Gutschrift, Korrekturbeleg, Gelangensbestätigung, Mahnschreiben, Storno Mahnschreiben, Proformarechnung, Sammelrechnung, Sammelgutschrift, Reparaturschein, Abhollieferung, Angebot, Lieferschein, Bestellbestätigung, Rücksendescheine.
-
 
 | *Zahlungsstatus*
 |Wähle einen Zahlungsstatus aus der Dropdown-Liste, um alle Aufträge mit diesem Zahlungsstatus zu suchen. Es stehen die folgenden Zahlungsstatus zur Verfügung:
@@ -844,10 +1084,10 @@ Ausstehend, Vorausbezahlt, Teilbezahlt, Bezahlt, Überbezahlt.
 
 | *Express-Lieferung*
 |wähle, ob die Lieferung als Express-Lieferung versendet werden soll.
-Wähle die leere Option, *Ja* oder *Nein*.
+Wähle die leere Option (Alle), *Ja* oder *Nein*.
 
 | *Gültige Rechnung*
-|Wähle die leere Option, *Ja* oder *Nein*.
+|Wähle die leere Option (Alle), *Ja* oder *Nein*.
 
 | *Zahlungsart*
 |Wähle eine oder mehrere Zahlungsarten aus der Dropdown-Liste, um nur Aufträge mit dieser Zahlungsart oder diesen Zahlungsarten zu filtern.
@@ -867,18 +1107,30 @@ Wähle die leere Option, *Ja* oder *Nein*.
 |Wähle, ob ein Auftrag storniert wurde. +
 Wähle die leere Option, *Ja* oder *Nein*.
 
-// TODO: Filter beschreiben und Operatoren ergänzen
 | *Rechnungssumme (Systemwährung)*
-|Wähle,
+|Gib die Rechnungssumme in der Systemwährung ein.
+*Ist gleich (=)*
+*Ist kleiner-gleich (<=)*
+*Ist größer-gleich (>=)*
+*Ist zwischen ([])*
 
 | *Verkaufter Gutschein*
 |Wähle,
+IN (grau, keine andere Option)
 
 | *Eingelöster Gutschein*
 |Wähle,
+IN (grau, keine andere Option)
 
 ////
 alte UI: Gutschein-Code: Alle, eingelöst, verkauft 
+
+Operatoren:
+IN = mehrfach
+= genau
+wenn nichts gewählt, leere Option, dann ALLE - siehe alte UI
+IN grau heißt keine andere Option
+IN schwarz heißt anderes wählen
 ////
 
 2+^| *Datum*
@@ -1263,8 +1515,9 @@ Mehrere Aufträge über die Gruppenfunktion bearbeiten:
 . Klicke auf icon:angle-down[], um die Bereiche des Auftrags wieder zu schließen. +
 → Der Auftrag bleibt aber in der Liste sichtbar.
 
-// TODO: für alle Auftragstypen sind die ersten Schritte gleich sowie die spätere Ansicht.
-= Auftragstypen
+// TODO: für alle Auftragstypen sind die ersten Schritte gleich sowie die spätere Ansicht (mit leicht unterschiedlichen Feldern). 
+
+== Auftragstypen
 
 == Retoure
 
@@ -1473,7 +1726,7 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 // TODO: Schritte beschreiben analog zu Retoure
 
 ////
-prüfen
+ausformulieren
 . Klicke auf die Dropdown-Liste *Reparatur* und dort auf die Einstellung *anlegen*. + Wo ??
 → Ein Bearbeitungsfenster öffnet sich. Gib den gewünschten *Status* und den *Zustand* der Reparatur an. Wähle die zu reparierenden *Artikel* aus. Gib optional einen *Hinweis* ein.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
@@ -1541,7 +1794,7 @@ Cart
 
 
 [#order-type-credit-note]
-== Gutschrift
+= Gutschrift
 
 In plentymarkets kannst du Gutschriften als PDF-Dateien generieren, um diese z.B. zu drucken oder deinen Kund:innen als E-Mail Anhang zukommen zu lassen. +
 Gutschriften nutzt du beispielsweise, um bei bereits bezahlten Aufträgen nachträgliche Preisnachlässe zu gewähren oder wenn im Rahmen von Retouren Rückerstattungen veranlasst werden sollen.
@@ -1977,46 +2230,45 @@ In einem Auftrag findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="g
 [#create-order-from-offer]
 === Auftrag über ein Angebot anlegen
 
-In einem Angebot findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]) ... Gehe folgendermaßen vor, um einen neuen Auftrag über ein bestehendes Angebot anzulegen. ...
+In einem Angebot findest du das Symbol *Neuer Auftrag* (icon:plus-square[role="green"]). Gehe folgendermaßen vor, um einen neuen Auftrag über ein bestehendes Angebot anzulegen. ...
 // TODO: Text auf neue UI anpassen
 Die Besonderheit ist, dass bei Menge eine beliebige Menge eingegeben werden kann.
 Der *Neue Auftrag* wird dir in der Navigation unter dem Angebot in blauer Schrift angezeigt sowie im Portlet *Auftragsreferenzen*.
 
-[[table-overview-new-order]]
+[[table-order-from-offer]]
 .Spalten Tabelle Neuer Auftrag
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
-|*Status*
-|Wähle einen Status aus der Dropdown-Liste, z.B. Waren auf Zahlung. +
-Diese Spalte ist eine Standardspalte.
+Einstellung
+| *Status*
+|Wähle einen Status aus der Dropdown-Liste. 
 
-|*Eigner*
-|Wähle einen Eigner aus der Dropdown-Liste. +
-Diese Spalte ist eine Standardspalte.
+| *Eigner*
+|Wähle einen Eigner aus der Dropdown-Liste.
+Angezeigt wird der aktuelle Nutzer.
 
 Symbol 3 Striche mit +
 
 // TODO: 2. Tabelle
- 
+ Suche
 | *Artikel-ID*
 |Die Artikel-ID wird angezeigt.
  
 | *Varianten-ID*
 |Die Varianten-ID wird angezeigt.
  
-| *Variantennummer*
-|Die Variantennummer wird angezeigt.
- 
 | *Menge*
-|Die Menge wird angezeigt.
+|Die Menge wird angezeigt. (Validierung)
  
 | *Verbleibende Stückzahl*
 |Die Verbleibende Stückzahl wird angezeigt.
+Die *verbleibende Stückzahl* zeigt dir an, wie viele Artikel du noch übernehmen kannst bzw. wie viele du dem aktuellen Lieferauftrag noch hinzugefügen kannst.
  
 | *Offene Menge*
 |Die Offene Menge wird angezeigt.
+Die *Offene Menge* zeigt dir an, wie viele Artikel nicht in den Lieferauftrag überführt werden können.
  
 | *Verfügbarer Warenbestand*
 |Der Verfügbare Warenbestand wird angezeigt.
@@ -2024,7 +2276,7 @@ Symbol 3 Striche mit +
 | *Artikelname*
 |Der Artikelname wird angezeigt.
  
-Rechts jeweils Warenkorb Symbol mit +
+Klicke auf das Warenkorb Symbol mit +
  
 darunter
  
@@ -2037,6 +2289,9 @@ darunter
 | *Menge*
 |Die Menge wird angezeigt.
 Die Menge kann hier verändert werden und beliebig hoch sein.
+
+| *Artikelname*
+|Der Artikelname wird angezeigt.
 |====
 
 
@@ -2158,3 +2413,12 @@ Cart
 | *Name der Artikelposition*
 |Die Artikelposition ist editierbar.
 |====
+
+
+Auftragstyp Sammelauftrag
+
+Auftragstyp Vorbestellung
+
+
+Aufträge verwalten (alte UI)
+// TODO: verweisen, aber Doppelungen vermeiden
