ADD eol easylog

--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -32,7 +32,7 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |13-Apr-2022
 |starting on 13-April-2022 (successive removal)
 |link:https://forum.plentymarkets.com/t/ankuendigung-eol-boards-announcement-eol-boards/676479[Forum link^]
-|07-Apr-2022 
+|07-Apr-2022
 
 | *Orders » Payments [Deprecated]* menu
 |06-July-2022
@@ -74,6 +74,12 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |01-Aug-2021
 |link:https://forum.plentymarkets.com/t/end-of-life-non-plugin-zahlarten-end-of-life-non-plugin-payment-methods/640916[Forum link^]
 |01-Jun-2021
+
+| *DHL Easylog*
+|31-Mar-2021
+|31-Mar-2021
+|link:https://forum.plentymarkets.com/t/dhl-easylog-time-to-say-goodbye-welcome-dhl-shipping-versenden-plugin/625910[Forum link^]
+|08-Feb-2021
 
 | *Hermes ProfiPaketService*
 |31-Mar-2020
