--- a/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
@@ -75,6 +75,12 @@ Diese Übersicht ersetzt nicht den xref:changelog:changelog.adoc#[Changelog] ode
 |link:https://forum.plentymarkets.com/t/end-of-life-non-plugin-zahlarten-end-of-life-non-plugin-payment-methods/640916[Link zum Forum^]
 |01.06.2021
 
+| *DHL Easylog*
+|31.03.2021
+|31.03.2021
+|link:https://forum.plentymarkets.com/t/dhl-easylog-time-to-say-goodbye-welcome-dhl-shipping-versenden-plugin/625910[Link zum Forum^]
+|08.02.2021
+
 | *Hermes ProfiPaketService*
 |31.03.2020
 |21.02.2021
