ADJUST order of columns amazon fba

--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -771,14 +771,14 @@ Die Auftragsstatus *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
 | *Versendete Artikel*
 |Die Anzahl aller versendeten Artikel.
 
+| *Erhaltene Artikel*
+|Alle Artikel, die sich bei Amazon im Sendungsstatus *RECEIVING* oder *CLOSED* befinden.
+
 | *Artikelstatus*
 |Die farbigen Punkte zeigen den Status der versendeten Artikel: +
 Grün: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Alle versendeten Artikel wurden erhalten. +
 Gelb: Die Sendung befindet sich im Status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* oder *CHECKED_IN*. Die versendeten Artikel befinden sich noch in Bearbeitung. +
 Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Nicht alle versendeten Artikel wurden erhalten.
-
-| *Erhaltene Artikel*
-|Alle Artikel, die sich bei Amazon im Sendungsstatus *RECEIVING* oder *CLOSED* befinden. +
 
 | *Sendungsstatus*
 a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, bei Amazon verfügbaren Status werden hier angezeigt: +
