--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -3,7 +3,7 @@
 |====
 |limango-Feld |Empfohlene Zuordnung / Anmerkungen | limango-Produktebene
 
-3+^| Produktname
+3+^| Produktname (für Kategorien mit "[Produktname] in [Farbe]")
 
 | Produktname
 | * *Artikeltext » Name 1*, Sprache *Deutsch*
@@ -477,7 +477,7 @@ Wenn nötig Ausweichdatenfeld hinzufügen.
 
 
 | Gewicht in kg
-| Anzugeben ist die Eigenmasse der Ware, ausgedrückt in vollen Kilogramm (kg). Unter Eigenmasse versteht man die Masse der Ware ohne alle Umschließungen (Netto-Gewicht). Die Angaben sind auf volle kg auf- oder abzurunden. 
+| Anzugeben ist die Eigenmasse der Ware, ausgedrückt in vollen Kilogramm (kg). Unter Eigenmasse versteht man die Masse der Ware ohne alle Umschließungen (Netto-Gewicht). Die Angaben sind auf volle kg auf- oder abzurunden.
 |
 
 3+^| Felder, die ohne Zuordnung übertragen werden
