--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -555,7 +555,7 @@ Für die Option *Datum* kannst du eine der folgenden Einstellungen wählen: +
 *Retourendatum* = Der Gutschriftauftrag wird mit dem Erstellungsdatum der Retoure erzeugt. +
 *Auftragsdatum* = Der Gutschriftauftrag wird mit dem Erstellungsdatum des Auftrags erzeugt.
 
-| *Gewährleistung erstellen*
+| *Gewährleistung anlegen*
 |Die Aktion erzeugt automatisch eine Gewährleistung für einen Auftrag.
 
 | [#intable-auftragsvorlage]*Auftrags-Vorlage verwenden*
