add some translations

--- a/docs/en-gb/modules/data/pages/change-history.adoc
+++ b/docs/en-gb/modules/data/pages/change-history.adoc
@@ -477,14 +477,15 @@ When you select a menu under *Menu visibilities*, the corresponding REST rights 
 
 //tag::crm[]
 
-Use the change history in the menu *Data » CRM Change History* to track changes made to customer data, ShopBooster data or configurations for data cleansing.
+Use the change history in the menu *Data » CRM Change History* to track changes made to xref:crm:contacts.adoc#[contact data], ShopBooster data or configurations for xref:data:data-cleansing.adoc#[data cleansing].
 Data is stored in this menu for 1 year.
 
 [.instruction]
 Displaying changes:
 
 . Go to *Data » CRM Change History*.
-. Select a reference type, e.g. the address.
+. Click on icon:filter_alt[set=material].
+. Select a reference type from the drop-down list, e.g. the address.
 . Enter the unique reference ID, e.g. the address ID. +
 *_Tip_*: You need to know the ID in order to track changes to the data record.
 . Click on *Search* (icon:search[role="blue"]). +
