--- a/docs/en-gb/modules/data/pages/data-cleansing.adoc
+++ b/docs/en-gb/modules/data/pages/data-cleansing.adoc
@@ -1,5 +1,5 @@
 = Data cleansing
-:keywords: Data cleansing, data purge, data cleanup, deleting unused addresses, deleting unused contacts, deleting orders, deleting history, deleting IP addresses, deleting newsletter registrations, clean up data
+:keywords: Cleanup, cleansing, data cleansing, data purge, automatic deletion, deleting addresses, deleting unused addresses, deleting unused contacts, deleting orders, deleting history, deleting IP addresses, deleting newsletter registrations, clean up data, automatically clean up data
 :description: Learn how to clean up data automatically in plentymarkets.
 :id: BPZ0VS4
 :author: team-crm
@@ -14,13 +14,13 @@ There are 2 main reasons for deleting data using the data cleansing function:
 [#100]
 == Assigning user rights
 
-Users of the type *Back end* can only access limited areas and menus in the plentymarkets back end. Thus, their access to the system is limited. If users of the type *Back end* should be able to work with the data cleansing menu, a user of the type *Admin* has to assign at least the rights listed in the following to users with *Back end* access.
+Users of the type *Back end* can only access limited areas and menus in the plentymarkets back end. Thus, their access to the system is limited. If users of this type should be able to use the data cleansing, a user of the type *Admin* has to assign at least the rights listed in the following to users of the type *Back end*.
 
 [.instruction]
 Assigning user rights for back end users:
 
 . Go to *Setup » Settings » User » Rights » User*.
-. Use the search function (icon:search[role="blue"]) and open the user account that should be edited.
+. Use the search function (icon:search[role="blue"]) and open the account that should be edited.
 . Activate in the *Authorisations* area, the options *Data > Cleansing > Show* and *Data > Cleansing > Edit*.
 . *Save* (icon:save[role="green"]) the settings.
 
@@ -32,14 +32,14 @@ In order that data records are deleted in your plentymarkets system after a cert
 [NOTE]
 .Further functions will be added to this menu step by step
 ====
-Currently, you can automatically delete unassigned addresses, unused contacts, orders, the change history, the IP addresses attached to an order and expired, unconfirmed newsletter subscriptions. Step by step, further areas will be added to this menu.
+Currently, you can automatically delete unassigned addresses, unused contacts, orders, the change history, the IP addresses attached to an order and unconfirmed newsletter registrations. Step by step, further areas will be added to this menu.
 ====
 
 [.instruction]
 Entering deletion values:
 
 . Go to *Setup » Settings » Hosting » Cleansing*.
-. Enter a value in the input field. Note the explanations in <<#table-settings-data-cleansing>>.
+. Enter a value in the input field. Note <<#table-settings-data-cleansing>>.
 . Activate the toggle button (icon:toggle-off[role="red"]).
 . *Save* (icon:save[role="green"]) the settings. +
 → Data cleansing is activated (icon:toggle-off[role="green"]).
@@ -59,7 +59,7 @@ Entering deletion values:
 *_Note:_* The check for unused data records takes place every day. In this context, the system checks whether there are contacts that have been unused for a time longer than the duration you set. If contacts are unused, these are deleted the next day.
 
 | *Deletion of the change history (after days)*
-|Enter the number in days. After this time period has expired, entries in the xref:crm:managing-contacts.adoc#5100[change history] are automatically deleted from your plentymarkets system. The change history logs changes made to the data in your plentymarkets system. Maximum value: 365 days. +
+|Enter the number in days. After this time period has expired, entries in the xref:crm:edit-contact.adoc#change-history-contact-data[change history] are automatically deleted from your plentymarkets system. The change history logs changes made to the data in your plentymarkets system. Maximum value: 365 days. +
 *_Note:_* The check for unused data records takes place every day. In this context, the system checks whether there is data in the change history that has been unused for a time longer than the duration you set. If data in the change history is unused, it is deleted the next day.
 
 | *Deletion of newsletter subscriptions (after days)*
