fix link ar list

--- a/docs/en-gb/modules/crm/pages/ar-list.adoc
+++ b/docs/en-gb/modules/crm/pages/ar-list.adoc
@@ -9,7 +9,7 @@ The *CRM » AR list* menu provides you with an overview of all outstanding recei
 [#preparatory-settings]
 == Preparatory settings
 
-You can set default settings for xref:ar-list.adoc#filter[search filters] of the AR list in the *Setup » CRM » Settings* menu. Note <<#table-default-settings-filters-ar-list>>.
+You can set default settings for xref:crm:ar-list.adoc#filter[search filters] of the AR list in the *Setup » CRM » Settings* menu. Note <<#table-default-settings-filters-ar-list>>.
 
 [[table-default-settings-filters-ar-list]]
 .Filter settings AR list
