--- a/docs/en-gb/modules/markets/pages/variation-export.adoc
+++ b/docs/en-gb/modules/markets/pages/variation-export.adoc
@@ -85,7 +85,7 @@ include::partial$catalogue-assistant-config.adoc[]
 --
 Select the amazon account from the drop-down list. You need to create a separate catalogue for each combination of one Amazon account, one Amazon platform and one Amazon flatfile. You can only select Amazon accounts that are already saved in your plentymarkets system. If the account is not shown, go to *Setup » Markets » Amazon » Settings* and create a xref:markets:amazon-setup.adoc#300[new account] or use the assistant *Base settings - Amazon*.
 
-*_Note:_* Create xref:crm:managing-contacts.adoc#15[the necessary customer classes] in advance if they do not already exist in your plentymarkets system.
+*_Note:_* Create xref:crm:preparatory-settings.adoc#create-customer-class[the necessary customer classes] in advance if they do not already exist in your plentymarkets system.
 --
 
 [.collapseBox]
