update contact links in stock management section

--- a/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/properties.adoc
@@ -172,7 +172,7 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Lagerort*.
 Solche Eigenschaften werden zur Charakterisierung von deinen Lagerorten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:crm:kontakte-verwalten.adoc#950[Kontakten] verwendet werden.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] verwendet werden.
 Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 
 | *Typ* +
@@ -359,7 +359,7 @@ Wenn du ganz viele Eigenschaften erstellen will, dann kannst eine Menge Zeit spa
 --
 
 Ja.
-Eigenschaften können auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#[Produkten] oder xref:crm:kontakte-verwalten.adoc#950[Kontakte] verwendet werden.
+Eigenschaften können auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#[Produkten] oder xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakte] verwendet werden.
 Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
 
 --
