--- a/docs/en-gb/modules/stock-management/pages/stock-management.adoc
+++ b/docs/en-gb/modules/stock-management/pages/stock-management.adoc
@@ -30,7 +30,7 @@ There are many factors that influence a well-functioning stock management. Some 
 [.col-md-6]
 .Registering and booking item quantities
 =====
-* **xref:crm:managing-contacts.adoc#20[Creating suppliers]**
+* **xref:crm:preparatory-settings.adoc#create-type[Creating suppliers]**
 * **xref:stock-management:new-incoming-items.adoc#100[Assigning suppliers to variations]**
 * **xref:stock-management:new-incoming-items.adoc#200[Specifying the storage location of a variation]**
 * **xref:stock-management:new-incoming-items.adoc#500[Registering incoming items and their quantities]**
