--- a/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
@@ -189,8 +189,8 @@ Within the font group *Extended alphabets* you can choose between the options *E
 
 |*Structure of the delivery address*
 |Select the elements that are to be included in the delivery address and in which order these elements are to be positioned. +
-Activate the option *Title* if the title saved in the *Addresses* in the xref:crm:managing-contacts.adoc#100[contact data] are to be positioned in front of the contact name. +
-Activate the option *Contact person* if the information on the contact person saved in the xref:crm:managing-contacts.adoc#100[contact data] are to be included in the delivery address.
+Activate the option *Title* if the title saved in the *Addresses* in the xref:crm:edit-contact.adoc#details-individual-areas[contact data] are to be positioned in front of the contact name. +
+Activate the option *Contact person* if the information on the contact person saved in the xref:crm:edit-contact.adoc#details-individual-areas[contact data] are to be included in the delivery address.
 
 |*Items’ language*
 | Select in which language the item information are to be displayed on the reorder document. *Supplier’s language* can only be selected when the item data is actually maintained in this language. +
