--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -741,7 +741,7 @@ Vorschau im Katalog erstellen:
 . Öffne den Katalog.
 . Klicke oben in der Symbolleiste auf *Vorschau* (icon:preview[set=material]). +
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
-. Prüfe, ob die Daten so exportiert werden, wie du es erwartet hast.
+. Prüfe, ob die Daten so exportiert werden, wie du es erwartest.
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
 → Eine CSV-Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
 //end::catalogue-preview[]
@@ -762,7 +762,7 @@ Vorschau in Katalogübersicht erstellen:
 . Öffne die weiteren Aktionen (icon:ellipsis-v[]) in der Zeile des Katalogs.
 . Klicke auf *Vorschau* (icon:preview[set=material]). +
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
-. Prüfe, ob die Daten so exportiert werden, wie du es erwartet hast.
+. Prüfe, ob die Daten so exportiert werden, wie du es erwartest.
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
 → Eine CSV-Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
 
